--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/ramda": "^0.27.6"
+    "@types/ramda": "^0.27.6",
+    "@types/react-router-dom": "^5.1.5"
   }
 }
