--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/ramda": "^0.27.6",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5"
   }
 }
